[workspace]
members = [
   # ".", NOTE: the root likely doesn't need to be a cargo project 
   "cosmwasm/contracts/core/mailbox",
   "cosmwasm/contracts/filetree",
   "cosmwasm/packages/bindings",
   "cosmwasm_signer", "sandboxes/my-redis",
   "sandboxes/my-redis",
   "simple_relayer"

   # Add other paths if there are more packages in the workspace
]

# This is optional and can be used to define workspace-wide settings
[profile.release]
opt-level = 3
