[workspace]
members = [
   # ".", NOTE: the root likely doesn't need to be a cargo project 
   "cosmwasm/contracts/core/mailbox",
   "cosmwasm/contracts/filetree",
   "cosmwasm/contracts/bindings_factory",
   "cosmwasm/packages/bindings",
   "sandboxes/my-redis",
   "sandboxes/my-redis",
   "sandboxes/queue",
   "evm_listener",
   "relayer",
   # TODO: add the sandboxes/cosmwasm_signer and sandboxes/simple_relayer back here if you need it
   # It's causing rust analyzer errors atm--not worth time sink.
   
   # Add other paths if there are more packages in the workspace
]

# This is optional and can be used to define workspace-wide settings
[profile.release]
opt-level = 3
