[workspace]
members = [
   # ".", NOTE: the root likely doesn't need to be a cargo project 
   "cosmwasm/contracts/canine_bindings",
   "cosmwasm/contracts/bindings_factory",
   "cosmwasm/contracts/shared",
   "cosmwasm/packages/bindings",
   "sandboxes/my-redis",
   "sandboxes/queue",
   # NOTE: we had to remove evm listener and relayer because the dependency statements are messed up
   # This is fine, we'll remove the sandbox entirely soon. 
   
   # TODO: add the sandboxes/cosmwasm_signer and sandboxes/simple_relayer back here if you need it
   # It's causing rust analyzer errors atm--not worth time sink.
   
   # Add other paths if there are more packages in the workspace
]

# This is optional and can be used to define workspace-wide settings
[profile.release]
opt-level = 3