[package]
name = "cosmwasm_signer"
version = "0.1.0"
authors = ["jackal labs"]
description = "a sandbox cosmwasm signer"
edition = "2021"  

[dependencies]
cosmrs = "0.17.0"  
tokio = "1.39.1"
serde_json = "1.0.120"

cosmwasm-std = "1.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
cosmos_sdk = "0.1" # Hypothetical crate for Cosmos SDK interaction
thiserror = "1.0"
