[package]
name = "cosmwasm_signer"
version = "0.1.0"
authors = ["jackal labs"]
description = "a sandbox cosmwasm signer"
edition = "2021"  

[dependencies]
cosmrs = { version = "0.17.0", features = ["rpc", "cosmwasm"] }
tokio = "1.39.1"
serde_json = "1.0.120"

cosmwasm-std = "1.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
cosmos_sdk = "0.1" # Hypothetical crate for Cosmos SDK interaction
thiserror = "1.0"

bip39 = "2.0.0"
bip32 = "0.5.2"
hex = "0.4.3"

log = "0.4"
env_logger = "0.9"

tendermint-rpc = { version = "0.38.1", features = ["http-client"] }
tendermint = "0.37"
