[package]
name = "bindings-factory"
version = "0.1.0"
authors = ["Bi Phan <bi@jackallabs.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0", features = [
    "cosmwasm_1_2",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
# storage-outpost = { path = "../../..", default-features = false }
filetree = { path = "../filetree", default-features = false}
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
thiserror = { version = "1.0.31" }