[package]
name = "canine_bindings"
version = "0.1.0"
authors = ["Bi Phan <bi@jackallabs.io>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[features]
no_exports = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0", features = [
    "cosmwasm_1_2",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
jackal-bindings = "0.1.0"
shared = { version = "0.1.0", path = "../shared" }

cw2 = "0.15"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
base64 = "0.22.1"
