[package]
name = "mailbox"
version = "0.1.0"
authors = ["jackal labs"]
edition = "2021"  


[lib]
crate-type = ["cdylib", "rlib"]  # For CosmWasm smart contracts

[dependencies]
cosmwasm-std = "1.5.0"         # Adapt this version to match your CosmWasm version
cosmwasm-schema = "1.4.0"      # For schema generation
cw-storage-plus = "1.1.0"      # For advanced storage structures
serde = { version = "1.0.145", default-features = false, features = ["derive"] }


[features]
# Optional features can be defined here, if necessary

# This is optional and can be used to define workspace-wide settings
[profile.release]
opt-level = 3
